--- a/compose.yml
+++ b/compose.yml
@@ -1,13 +1,22 @@
 services:
-  app:
-    build: 
-      context: .
-      target: development
-      args:
-        UID: ${UID:-1000}
-        GID: ${GID:-1000}
-    volumes:
-      - .:/app
-    env_file:
-      - .env
-        
+    app:
+        build:
+            context: .
+            target: development
+            args:
+                UID: ${UID:-1000}
+                GID: ${GID:-1000}
+        ports:
+            - 4567:4567
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        command:
+            - bundle
+            - exec
+            - rackup
+            - -p
+            - "4567"
+            - --host
+            - 0.0.0.0
