--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build:css",
+    "build:css": "sass $* assets/styles:public/styles --style=compressed",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch:css": "npm run build:css -- --watch"
   },
   "repository": {
     "type": "git",
