--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "scripts": {
     "build": "npm run build:css",
     "build:css": "sass $* assets/styles:public/styles --style=compressed",
+    "build:js": "npx esbuild \"assets/scripts/**/scripts.js\" \"assets/scripts/scripts.js\" --entry-names=[dir]/[name] --outbase=assets/scripts --bundle --minify --outdir=public/scripts $*",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:css": "npm run build:css -- --watch"
+    "watch:css": "npm run build:css -- --watch",
+    "watch:js": "npm run build:js -- --watch=forever"
   },
   "repository": {
     "type": "git",
