--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Boilerplate code for starting a ruby project with docker / docker-compose",
   "main": "index.js",
+  "type": "module",
   "directories": {
     "lib": "lib"
   },
@@ -12,7 +13,7 @@
     "build:js": "npm run lint && npx esbuild \"assets/scripts/**/scripts.js\" \"assets/scripts/scripts.js\" --entry-names=[dir]/[name] --outbase=assets/scripts --bundle --minify --outdir=public/scripts $*",
     "lint": "npx eslint . --ignore-pattern 'public/' $*",
     "lint:fix": "npm run lint -- --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha --recursive",
     "watch:css": "npm run build:css -- --watch",
     "watch:js": "npm run build:js -- --watch=forever"
   },
