--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,18 @@ services:
             args:
                 UID: ${UID:-1000}
                 GID: ${GID:-1000}
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+
+    web:
+        build:
+            context: .
+            target: development
+            args:
+                UID: ${UID:-1000}
+                GID: ${GID:-1000}
         ports:
             - 4567:4567
         volumes:
@@ -20,3 +32,35 @@ services:
             - "4567"
             - --host
             - 0.0.0.0
+
+    js:
+        build:
+            context: .
+            target: development
+            args:
+                UID: ${UID:-1000}
+                GID: ${GID:-1000}
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        command:
+            - npm
+            - run
+            - watch:js
+
+    css:
+        build:
+            context: .
+            target: development
+            args:
+                UID: ${UID:-1000}
+                GID: ${GID:-1000}
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        command:
+            - npm
+            - run
+            - watch:css
