--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:css && npm run build:js",
     "build:css": "sass $* assets/styles:public/styles --style=compressed",
     "build:js": "npm run lint && npx esbuild \"assets/scripts/**/scripts.js\" \"assets/scripts/scripts.js\" --entry-names=[dir]/[name] --outbase=assets/scripts --bundle --minify --outdir=public/scripts $*",
-    "lint": "npx eslint . --ignore-pattern 'public/' $*",
+    "lint": "npx eslint ./assets/scripts/**/*.js --ignore-pattern 'public/' $*",
     "lint:fix": "npm run lint -- --fix",
     "test": "npx mocha --recursive",
     "watch:css": "npm run build:css -- --watch",
