--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build": "npm run build:css && npm run build:js",
     "build:css": "sass $* assets/styles:public/styles --style=compressed",
     "build:js": "npm run lint && npx esbuild \"assets/scripts/**/scripts.js\" \"assets/scripts/scripts.js\" --entry-names=[dir]/[name] --outbase=assets/scripts --bundle --minify --outdir=public/scripts $*",
-    "lint": "npx eslint ./assets/scripts/**/*.js --ignore-pattern 'public/' $*",
+    "lint": "npx eslint eslint.config.js ./assets/scripts/**/*.js ./test/**/*.js $*",
     "lint:fix": "npm run lint -- --fix",
-    "test": "npx mocha --recursive",
+    "test": "npm run test:mocha && npm run test:rspec",
+    "test:mocha": "npm run lint && npx mocha --recursive",
+    "test:rspec": "bundle exec rspec",
     "watch:css": "npm run build:css -- --watch",
     "watch:js": "npm run build:js -- --watch=forever"
   },
@@ -33,6 +35,7 @@
     "chai": "^5.1.2",
     "esbuild": "^0.24.2",
     "eslint": "^9.19.0",
+    "eslint-plugin-mocha": "^10.5.0",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "mocha": "^11.1.0",
