--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,4 +33,4 @@ jobs:
           cache: npm
       - run: npm ci
       - name: run tests
-        run: npm test:mocha
+        run: npm run test:mocha
