--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:css && npm run build:js",
     "build:css": "sass $* assets/styles:public/styles --style=compressed",
     "build:js": "npm run lint && npx esbuild \"assets/scripts/**/scripts.js\" \"assets/scripts/scripts.js\" --entry-names=[dir]/[name] --outbase=assets/scripts --bundle --minify --outdir=public/scripts $*",
-    "lint": "npx eslint eslint.config.js ./assets/scripts/**/*.js ./test/**/*.js $*",
+    "lint": "npx eslint eslint.config.js assets/scripts/ test/ $*",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run test:mocha && npm run test:rspec",
     "test:mocha": "npm run lint && npx mocha --require ./test/setup.js --recursive",
