--- a/compose.yml
+++ b/compose.yml
@@ -1,64 +1,69 @@
 services:
-    app:
-        build:
-            context: .
-            target: development
-            args:
-                UID: ${UID:-1000}
-                GID: ${GID:-1000}
-        volumes:
-            - .:/app
-        env_file:
-            - .env
+  app:
+    build:
+      context: .
+      target: development
+      args:
+        UID: ${UID:-1000}
+        GID: ${GID:-1000}
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    command:
+      - sleep
+      - infinity
 
-    web:
-        build:
-            context: .
-            target: development
-            args:
-                UID: ${UID:-1000}
-                GID: ${GID:-1000}
-        ports:
-            - 4567:4567
-        volumes:
-            - .:/app
-        env_file:
-            - .env
-        command:
-            - bundle
-            - exec
-            - puma
-            - -b
-            - "tcp://0.0.0.0:4567"
+  web:
+    build:
+      context: .
+      target: development
+      args:
+        UID: ${UID:-1000}
+        GID: ${GID:-1000}
+    ports:
+      - 4567:4567
+      - 9100:9100
+      - 9293:9293
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    command:
+      - bundle
+      - exec
+      - puma
+      - -b
+      - "tcp://0.0.0.0:4567"
 
-    js:
-        build:
-            context: .
-            target: development
-            args:
-                UID: ${UID:-1000}
-                GID: ${GID:-1000}
-        volumes:
-            - .:/app
-        env_file:
-            - .env
-        command:
-            - npm
-            - run
-            - watch:js
+  js:
+    build:
+      context: .
+      target: development
+      args:
+        UID: ${UID:-1000}
+        GID: ${GID:-1000}
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    command:
+      - npm
+      - run
+      - watch:js
 
-    css:
-        build:
-            context: .
-            target: development
-            args:
-                UID: ${UID:-1000}
-                GID: ${GID:-1000}
-        volumes:
-            - .:/app
-        env_file:
-            - .env
-        command:
-            - npm
-            - run
-            - watch:css
+  css:
+    build:
+      context: .
+      target: development
+      args:
+        UID: ${UID:-1000}
+        GID: ${GID:-1000}
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    command:
+      - npm
+      - run
+      - watch:css
