adds keys that should be in env.example

--- a/env.example
+++ b/env.example
@@ -1,3 +1,7 @@
 UID=YOUR_UID
 GID=YOUR_GID
-SEKRET="aweflweif;wltgi5t13o5i"
+OIDC_ISSUER="your_issuer"
+OIDC_CLIENT_ID="your_client_id"
+OIDC_CLIENT_SECRET="your_secret"
+DEBUG=true
+ALMA_API_KEY="your_alma_api_key"
