adds dev_login logic

--- a/env.example
+++ b/env.example
@@ -5,3 +5,5 @@ OIDC_CLIENT_ID="your_client_id"
 OIDC_CLIENT_SECRET="your_secret"
 DEBUG=true
 ALMA_API_KEY="your_alma_api_key"
+#DEV_LOGIN=true
+#APP_ENV=production
