--- a/config/search_options.yaml
+++ b/config/search_options.yaml
@@ -1,153 +1,82 @@
 # This is the list of search options for the search bar at `views/datastores/partials/_search.erb`.
-- group: Search by
-  options:
-  - datastores:
-    - everything
-    - catalog
-    - databases
-    - onlinejournals
-    - guidesandmore
-    text: Keyword
-    tip: Enter one or more keywords. Use quotes to search for a phrase (e.g., solar
-      power; polar bears; “systems of oppression”). See tips about
-      <a href="https://guides.lib.umich.edu/c.php?g=914690&p=6590011?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Basic Keyword Searching - opens in new window">
-      Basic Keyword Searching</a>.
-    value: keyword
-  - datastores:
-    - articles
-    text: Keyword (contains)
-    tip: Enter one or more keywords to search broadly (e.g., Black Women Scientists).
-      Use quotes to search for a specific phrase (e.g., “systems of oppression”).
-      See tips about <a href="https://guides.lib.umich.edu/c.php?g=914690&p=6590011?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Basic Keyword Searching - opens in new window">
-      Basic Keyword Searching</a>.
-    value: keyword
-  - datastores:
-    - articles
-    text: Keyword (is exact)
-    tip: Enter an exact phrase to search (e.g., solar power). Use AND to separate
-      concepts or phrases (e.g., Black Women Scientists AND Chanda Prescod). See tips
-      about <a href="https://guides.lib.umich.edu/c.php?g=914690&p=6590011?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Basic Keyword Searching - opens in new window">
-      Basic Keyword Searching</a>.
-    value: exact
-  - datastores:
-    - everything
-    - catalog
-    - articles
-    - databases
-    - onlinejournals
-    - guidesandmore
-    text: Title
-    tip: Enter the first words in a title. Use quotes to search for a phrase (e.g.,
-      One Hundred Years of Solitude; “The Fourth World”; Disability Visibility).
-    value: title
-  - datastores:
-    - catalog
-    - databases
-    - onlinejournals
-    text: Title starts with
-    tip: Search for titles that begin with a word or phrase (e.g., introduction to
-      chemistry; history of Mexico; Asian art).
-    value: title_starts_with
-  - datastores:
-    - everything
-    - catalog
-    - articles
-    text: Author
-    tip: Search for items by author or contributor (e.g., Kimmerer, Robin Wall). Also
-      search organizations or corporate authors (e.g., American Medical Association).
-      Search for items by author using original scripts (e.g., 小川 洋子).
-    value: author
-  - datastores:
-    - catalog
-    text: Journal/Serial Title
-    tip: Search the title of a journal or serial publication (e.g., Detroit Free Press;
-      “journal of the american medical association”; African-American newspapers).
-    value: journal_title
-  - datastores:
-    - catalog
-    - articles
-    - onlinejournals
-    text: Subject
-    tip: Use words or phrases to search subjects (e.g., plant physiology, Baldwin,
-      James).
-    value: subject
-  - datastores:
-    - catalog
-    - onlinejournals
-    text: LC Subject starts with
-    tip: Enter words or phrases to see subjects that start with them (e.g., Baldwin,
-      James; sociology dictionaries).
-    value: lc_subject_starts_with
-  - datastores:
-    - databases
-    - onlinejournals
-    text: Academic Discipline
-    tip: Search academic disciplines (e.g., International business; Latin american
-      and caribbean studies). <a href="/databases/browse">Browse all Databases</a>
-      alphabetically or by academic discipline.
-    value: academic_discipline
-  - datastores:
-    - databases
-    text: Publisher
-    tip: Search names of publishers of databases.
-    value: publisher
-  - datastores:
-    - catalog
-    - onlinejournals
-    text: Call Number starts with
-    tip: Search the first few letters and numbers of a call number (e.g., RC662.4
-      .H38 2016; QH 105). <a href="https://www.loc.gov/catdir/cpso/lcco/?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Learn about the meaning of call numbers - opens in new window">
-      Learn about the meaning of call numbers</a>.
-    value: call_number_starts_with
-  - datastores:
-    - catalog
-    text: Series (transcribed)
-    tip: Search the series title of a group of thematically-related books. Use &lsquo;title&rsquo;
-      search to find unique titles within a series (e.g., Politics of Race and Ethnicity,
-      Brill&apos;s Annotated Bibliographies, Oxford Choral Music).
-    value: series
-  - datastores:
-    - articles
-    text: Date
-    tip: Search by year (YYYY) (e.g., 2021; 1942).
-    value: publication_date
-  - datastores:
-    - catalog
-    - onlinejournals
-    text: ISBN/ISSN/OCLC/etc
-    tip: Search by ISSN (8-digit code), ISBN (13 or 10-digit code), or OCLC number
-      (e.g., 0040-781X; 0747581088; 921446069).
-    value: isn
-  - datastores:
-    - articles
-    text: ISSN
-    tip: Search by ISSN (8-digit code) (e.g., 0040-781X).
-    value: issn
-  - datastores:
-    - articles
-    text: ISBN
-    tip: Search by ISBN (13 or 10-digit code) (e.g., 0747581088).
-    value: isbn
-- group: Browse by
-  options:
-  - datastores:
-    - catalog
-    text: Browse by call number (LC and Dewey)
-    tip: Browse by Library of Congress (LC) or Dewey call number, sorted alphanumerically
-      (e.g., RC662.4 .H38 2016; QH 105, 880 J375re).
-      <a href="https://www.loc.gov/catdir/cpso/lcco/?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Learn about the meaning of call numbers - opens in new window">
-      Learn about the meaning of call numbers</a>.
-    value: browse_by_callnumber
-  - datastores:
-    - catalog
-    text: Browse by author
-    tip: Browse an alphabetical list of authors. Authors can be people (put last names
-      first), organizations, or events (e.g., Kingston, Maxine Hong; United Nations
-      Development Programme; Pong, Chun-ho).
-    value: browse_by_author
-  - datastores:
-    - catalog
-    text: Browse by subject
-    tip: Browse an A-Z list of subjects (e.g., motion pictures; history--United States;
-      Eliot, George).
-    value: browse_by_subject
+- value: academic_discipline
+  text: Academic Discipline
+  tip: Search academic disciplines (e.g., International business; Latin american and caribbean studies). <a href="/databases/browse">Browse all Databases</a> alphabetically or by academic discipline.
+  group: search
+- value: author
+  text: Author
+  tip: Search for items by author or contributor (e.g., Kimmerer, Robin Wall). Also search organizations or corporate authors (e.g., American Medical Association). Search for items by author using original scripts (e.g., 小川 洋子).
+  group: search
+- value: browse_by_author
+  text: Browse by author
+  tip: Browse an alphabetical list of authors. Authors can be people (put last names first), organizations, or events (e.g., Kingston, Maxine Hong; United Nations Development Programme; Pong, Chun-ho).
+  group: browse
+- value: browse_by_callnumber
+  text: Browse by call number (LC and Dewey)
+  tip: Browse by Library of Congress (LC) or Dewey call number, sorted alphanumerically (e.g., RC662.4 .H38 2016; QH 105, 880 J375re). <a href="https://www.loc.gov/catdir/cpso/lcco/?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Learn about the meaning of call numbers - opens in new window">Learn about the meaning of call numbers</a>.
+  group: browse
+- value: browse_by_subject
+  text: Browse by subject
+  tip: Browse an A-Z list of subjects (e.g., motion pictures; history--United States; Eliot, George).
+  group: browse
+- value: call_number_starts_with
+  text: Call Number starts with
+  tip: Search the first few letters and numbers of a call number (e.g., RC662.4.H38 2016; QH 105). <a href="https://www.loc.gov/catdir/cpso/lcco/?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Learn about the meaning of call numbers - opens in new window">Learn about the meaning of call numbers</a>.
+  group: search
+- value: exact
+  text: Keyword (is exact)
+  tip: Enter an exact phrase to search (e.g., solar power). Use AND to separate concepts or phrases (e.g., Black Women Scientists AND Chanda Prescod). See tips about <a href="https://guides.lib.umich.edu/c.php?g=914690&p=6590011?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Basic Keyword Searching - opens in new window">Basic Keyword Searching</a>.
+  group: search
+- value: isbn
+  text: ISBN
+  tip: Search by ISBN (13 or 10-digit code) (e.g., 0747581088).
+  group: search
+- value: isn
+  text: ISBN/ISSN/OCLC/etc
+  tip: Search by ISSN (8-digit code), ISBN (13 or 10-digit code), or OCLC number (e.g., 0040-781X; 0747581088; 921446069).
+  group: search
+- value: issn
+  text: ISSN
+  tip: Search by ISSN (8-digit code) (e.g., 0040-781X).
+  group: search
+- value: journal_title
+  text: Journal/Serial Title
+  tip: Search the title of a journal or serial publication (e.g., Detroit Free Press; “journal of the american medical association”; African-American newspapers).
+  group: search
+- value: keyword
+  text: Keyword
+  tip: Enter one or more keywords. Use quotes to search for a phrase (e.g., solar power; polar bears; “systems of oppression”). See tips about <a href="https://guides.lib.umich.edu/c.php?g=914690&p=6590011?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Basic Keyword Searching - opens in new window">Basic Keyword Searching</a>.
+  group: search
+- id: keyword_contains
+  value: keyword
+  text: Keyword (contains)
+  tip: Enter one or more keywords to search broadly (e.g., Black Women Scientists). Use quotes to search for a specific phrase (e.g., “systems of oppression”). See tips about <a href="https://guides.lib.umich.edu/c.php?g=914690&p=6590011?utm_source=library-search" class="open-in-new" target="_blank" rel="noopener noreferrer" aria-label="Basic Keyword Searching - opens in new window">Basic Keyword Searching</a>.
+  group: search
+- value: lc_subject_starts_with
+  text: LC Subject starts with
+  tip: Enter words or phrases to see subjects that start with them (e.g., Baldwin, James; sociology dictionaries).
+  group: search
+- value: publication_date
+  text: Date
+  tip: Search by year (YYYY) (e.g., 2021; 1942).
+  group: search
+- value: publisher
+  text: Publisher
+  tip: Search names of publishers of databases.
+  group: search
+- value: series
+  text: Series (transcribed)
+  tip: Search the series title of a group of thematically-related books. Use "title"; search to find unique titles within a series (e.g., Politics of Race and Ethnicity, Brill's Annotated Bibliographies, Oxford Choral Music).
+  group: search
+- value: subject
+  text: Subject
+  tip: Use words or phrases to search subjects (e.g., plant physiology, Baldwin, James).
+  group: search
+- value: title
+  text: Title
+  tip: Enter the first words in a title. Use quotes to search for a phrase (e.g., One Hundred Years of Solitude; “The Fourth World”; Disability Visibility).
+  group: search
+- value: title_starts_with
+  text: Title starts with
+  tip: Search for titles that begin with a word or phrase (e.g., introduction to chemistry; history of Mexico; Asian art).
+  group: search
